k8s/infrastructure/overlays/production/ingress-gateway-tls-patch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: publicgateway
  namespace: istio-system
  labels:
    istio: publicgateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        credentialName: ingress-cert-frompfx
        privateKey: sds
        serverCertificate: sds
        minProtocolVersion: TLSV1_2
        cipherSuites:
        - TLS_AES_128_GCM_SHA256
        - TLS_AES_256_GCM_SHA384
        - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
        - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
